# QA-test

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  local.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tables.py
backend/app/: chroma_client.py  db.py  main.py  models.py
backend/app/routers/: answer.py  feedback.py  query.py  search.py
backend/mnt/data/: 歯科経営用語.xlsx
backend/scripts/: ingest.py
backend/tests/: conftest.py  test_api.py  test_search_answer.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnswerView.tsx  CandidateList.tsx  FeedbackButtons.tsx  QueryForm.tsx
frontend/tests/: basic.spec.ts
infra/: docker-compose.yml
