[tool.poetry]
name = "qa-backend"
version = "0.1.0"
description = "QA search backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "*"}
SQLAlchemy = "^2.0"
asyncpg = "*"
openai = "^1.0"
python-dotenv = "*"
pandas = "*"
xlrd = "*"
chromadb = "*"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
