[tool.poetry]
name = "qa-backend"
version = "0.1.0"
description = "QA search system backend"
authors = ["QA Team <qa@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
SQLAlchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29"
openai = "^1.0"
chromadb = "*"
python-dotenv = "^1.0"
pydantic = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
